fix for mobile-menu top50px, for open dropdown-menu grey-line invisible

--- a/docs/projects/server-gate/css/main.css
+++ b/docs/projects/server-gate/css/main.css
@@ -181,14 +181,12 @@ button {
 }
 .mobile-nav {
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   right: 0;
   bottom: 0;
-  padding-top: 50px;
   width: 100%;
   min-width: 320px;
-  height: 100%;
   background-color: var(--white);
   opacity: 0;
   -webkit-transform: translateX(100%);
