--- a/docs/projects/server-gate/less/blocks/_mobile-nav.less
+++ b/docs/projects/server-gate/less/blocks/_mobile-nav.less
@@ -1,13 +1,11 @@
 .mobile-nav {
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     bottom: 0;
-    padding-top: 50px;
     width: 100%;
     min-width: 320px;
-    height: 100%;
     background-color: var(--white);
     opacity: 0;
     transform: translateX(100%);
